--- a/recipes/recipe/templates/profile.html
+++ b/recipes/recipe/templates/profile.html
@@ -8,9 +8,19 @@
         <div v-if="!error.state">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>${user.displayName}</h1>
+                    <h1 v-if="user.displayName">${user.displayName}</h1>
+                    <h1 v-else>${user.username}</h1>
+                    <h4 v-if="user.username && user.id">
+                        @${user.username} | #${user.id}
+                        <span v-if="user.isStaff"> | Staff</span>
+                    </h4>
+
                 </div>
             </div>
+        </div>
+        <div v-else>
+            <h1>Error ${error.code}</h1>
+            <h3>${error.text}</h3>
         </div>
     </div>
     
@@ -27,9 +37,11 @@
             data: {
                 user: {
                     username: "",
+                    id: "",
                     displayName: "",
-
+                    isStaff: false,
                 },
+                loading: false,
                 error:
                 {
                     state: false,
@@ -40,13 +52,79 @@
             mounted: function()
             {
                 var username = "{{username}}";
-                this.getUser(username);
+                var id = parseInt("{{user_id}}");
+                if(id)
+                {
+                    this.getUserById(id);
+                }
+                else
+                {
+                    if(username)
+                    {
+                        this.getUserByUsername(username);
+                    }
+                }
             },
             methods:
             {
-                getUser: function(username)
+                getUserByUsername: function(_username)
                 {
-                    this.user.username = username;
+                    console.log(_username)
+                    this.$http.get(`/api/user/?username=${_username}`)
+                        .then((response) => {
+                            console.log(response.data);
+                            if(response.data.length > 0)
+                            {
+                                this.parseUser(response.data[0]);
+                            }
+                            else
+                            {
+                                this.error.state = true;
+                                this.error.code = 404;
+                                this.error.text = "User Not Found.";
+                            }
+                            
+                            this.loading = false;
+                        })
+                        .catch((err) => 
+                        {
+                            this.loading = false;
+
+                            console.log(err)
+                            this.error.state = true;
+                            this.error.code = err.status;
+                            this.error.text = err.statusText;
+                        })
+                },
+                getUserById: function(_id)
+                {
+                    this.$http.get(`/api/user/${_id}/`)
+                        .then((response) => {
+
+                            this.parseUser(response.data);
+                            
+                            this.loading = false;
+                        })
+                        .catch((err) => 
+                        {
+                            this.loading = false;
+
+                            console.log(err)
+                            this.error.state = true;
+                            this.error.code = err.status;
+                            this.error.text = err.statusText;
+                        })
+                },
+                parseUser: function(user)
+                {
+                    console.log(user);
+                    this.user.username = user.username;
+                    this.user.id = user.id;
+                    if(user.first_name || user.last_name)
+                    {
+                        this.user.displayName = user.first_name+" "+user.last_name;
+                    }
+                    this.user.isStaff = user.is_staff;
                 }
             }
         })
