made the user model to contain recipe references and recipes a creator

--- a/recipes/recipe/templates/recipe_details.html
+++ b/recipes/recipe/templates/recipe_details.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="col-sm-6 text-right">
                     <p>
-                        <h5>By ${"User"}</h5>
+                        <h5>By ${recipe.creator}</h5>
                     </p>
                     <p v-if="!editing">
                         <button v-on:click='editRecipe()' class="btn btn-primary">Edit</button>
