--- a/recipes/recipe/templates/profile.html
+++ b/recipes/recipe/templates/profile.html
@@ -7,14 +7,47 @@
     <div id="profile">
         <div v-if="!error.state">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12 user">
                     <h1 v-if="user.displayName">${user.displayName}</h1>
                     <h1 v-else>${user.username}</h1>
                     <h4 v-if="user.username && user.id">
                         @${user.username} | #${user.id}
                         <span v-if="user.isStaff"> | Staff</span>
                     </h4>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 feed">
+                    <h2>Feed</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 recipes">
+                    <h2>Recipes</h2>
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div 
+                                v-for="recipe in user.recipes.created" 
+                                class="col-lg-4 col-sm-6" style="margin-bottom: 15px;">
 
+                                <div 
+                                    class="card" 
+                                    style="z-index: 999; box-shadow: 0 .5rem 1rem rgba(0,0,0,.15) !important">
+
+                                    <img 
+                                        class="card-img-top" 
+                                        v-bind:src="recipe.image"
+                                        alt="">
+                                    <div class="card-body">
+                                        <h5 class="card-title">${recipe.title}</h5>
+                                        <p class="card-text">
+                                            <i v-for="(foo, i) in Math.round(recipe.rating)" class="fas fa-star" style="color: gold;"></i>
+                                        <a v-bind:href="'/recipe/'+recipe.id+'/'" class="btn btn-primary">Visit</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -40,8 +73,13 @@
                     id: "",
                     displayName: "",
                     isStaff: false,
+
+                    recipes: {
+                        created: [],
+                    }
                 },
-                loading: false,
+                loadingUser: false,
+                loadingRecipes: false,
                 error:
                 {
                     state: false,
@@ -69,26 +107,25 @@
             {
                 getUserByUsername: function(_username)
                 {
-                    console.log(_username)
+                    this.loadingUser = true;
                     this.$http.get(`/api/user/?username=${_username}`)
                         .then((response) => {
-                            console.log(response.data);
                             if(response.data.length > 0)
                             {
-                                this.parseUser(response.data[0]);
+                                this.parseUser(response.data[0].user);
                             }
                             else
                             {
                                 this.error.state = true;
                                 this.error.code = 404;
-                                this.error.text = "User Not Found.";
+                                this.error.text = "Not Found.";
                             }
                             
-                            this.loading = false;
+                            this.loadingUser = false;
                         })
                         .catch((err) => 
                         {
-                            this.loading = false;
+                            this.loadingUser = false;
 
                             console.log(err)
                             this.error.state = true;
@@ -98,16 +135,17 @@
                 },
                 getUserById: function(_id)
                 {
+                    this.loadingUser = true;
                     this.$http.get(`/api/user/${_id}/`)
                         .then((response) => {
 
-                            this.parseUser(response.data);
+                            this.parseUser(response.data.user);
                             
-                            this.loading = false;
+                            this.loadingUser = false;
                         })
                         .catch((err) => 
                         {
-                            this.loading = false;
+                            this.loadingUser = false;
 
                             console.log(err)
                             this.error.state = true;
@@ -125,6 +163,25 @@
                         this.user.displayName = user.first_name+" "+user.last_name;
                     }
                     this.user.isStaff = user.is_staff;
+
+                    // Get the recipes
+                    this.getUserRecipes(user.id);
+                },
+                getUserRecipes: function(_user_id)
+                {
+                    this.loadingRecipes = true;
+                    this.$http.get(`/api/recipe/?creator=${_user_id}`)
+                        .then((response) => 
+                        {
+                            this.user.recipes.created = response.data;
+                            console.log(this.user);
+                            this.loadingRecipes = false;
+                        })
+                        .catch((err) => 
+                        {
+                            this.loadingRecipes = false;
+                            console.log(err);
+                        })
                 }
             }
         })
