--- a/recipes/recipe/templates/base.html
+++ b/recipes/recipe/templates/base.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav id="navbar" class="navbar navbar-expand-sm navbar-light bg-light" style="margin-bottom: 20px;">
-        <a class="navbar-brand" href="/recipes/">Recipes</a>
+        <a class="navbar-brand" href="/">Recipes</a>
         
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="navbar-nav mr-auto mt-2 mt-sm-0">
