--- a/recipes/recipe/templates/feed.html
+++ b/recipes/recipe/templates/feed.html
@@ -6,8 +6,10 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h1>Your Feed</h1>
-            
+            <h1>Happy Birthday Papi!</h1>
+            <p>
+                Das isch dini Rezeptdatebank... Sie funktioniert nonig würkli... Aber chasch gern mal ume luege :-)
+            </p>
         </div>
     </div>
     
